{
    "name": "MainLoopInputs",
    "maps": [
        {
            "name": "BasicMap",
            "id": "5f69fe3b-4cf6-4ec1-8b76-9464f21d340d",
            "actions": [
                {
                    "name": "OnClick",
                    "type": "Button",
                    "id": "b9972979-155d-4cd3-a515-0f5129e2136c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "44c1b4ef-5cf0-4625-b35a-b67b9383ea42",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDrag",
                    "type": "Value",
                    "id": "e7c13731-5f4c-4a41-87a7-fa8d9295b9c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9992a89f-6a7b-4edb-9809-5d1dc2534eb7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a750e1c1-4f6f-4c64-8b94-105dada3784f",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72edc553-3827-4874-88fa-80cde99c1b0f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "921fa4dd-2fb4-4e23-88ea-8f0f65f689fb",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb260714-b961-44ea-b0ea-ab6df7a8cb85",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}